# main

./: README.md  main.py  pyproject.toml
output_marker/bs-en-1591-1-2024-calculation/: document.md
output_paddle/1591/: extracted_content.md
vysledok_marker-backup/: document_marker.md
